cabal-version:      2.4
name:               hsderiv
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An Haskell implementation Brzozowski derivatives for regular expressions.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gonçalo Teixeira
maintainer:         gspteixeira@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hsderiv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Derivative
                 ,    Lang
                 ,    Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                 ,    parsec
    hs-source-dirs:   app
    default-language: Haskell2010
